--- a/WebCatalog/WebCatalog.Domain/WebCatalog.Domain.csproj
+++ b/WebCatalog/WebCatalog.Domain/WebCatalog.Domain.csproj
@@ -11,6 +11,11 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="MailKit" Version="3.3.0" />
+    <PackageReference Include="Serilog.AspNetCore" Version="5.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Reference Include="Microsoft.AspNetCore.Mvc.Core">
       <HintPath>..\..\..\..\..\..\Program Files\dotnet\packs\Microsoft.AspNetCore.App.Ref\6.0.5\ref\net6.0\Microsoft.AspNetCore.Mvc.Core.dll</HintPath>
     </Reference>
